; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_xpt.c_xptregister.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_xpt.c_xptregister.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_periph = type { i32* }
%struct.cam_sim = type { %struct.cam_periph* }

@.str = private unnamed_addr constant [32 x i8] c"xptregister: periph was NULL!!\0A\00", align 1
@CAM_REQ_CMP_ERR = common dso_local global i32 0, align 4
@xpt_periph = common dso_local global %struct.cam_periph* null, align 8
@CAM_REQ_CMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cam_periph*, i8*)* @xptregister to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xptregister(%struct.cam_periph* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.cam_periph*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.cam_sim*, align 8
  store %struct.cam_periph* %0, %struct.cam_periph** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.cam_periph*, %struct.cam_periph** %4, align 8
  %8 = icmp eq %struct.cam_periph* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = call i32 @printf(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @CAM_REQ_CMP_ERR, align 4
  store i32 %11, i32* %3, align 4
  br label %22

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = bitcast i8* %13 to %struct.cam_sim*
  store %struct.cam_sim* %14, %struct.cam_sim** %6, align 8
  %15 = load %struct.cam_periph*, %struct.cam_periph** %4, align 8
  %16 = load %struct.cam_sim*, %struct.cam_sim** %6, align 8
  %17 = getelementptr inbounds %struct.cam_sim, %struct.cam_sim* %16, i32 0, i32 0
  store %struct.cam_periph* %15, %struct.cam_periph** %17, align 8
  %18 = load %struct.cam_periph*, %struct.cam_periph** %4, align 8
  store %struct.cam_periph* %18, %struct.cam_periph** @xpt_periph, align 8
  %19 = load %struct.cam_periph*, %struct.cam_periph** %4, align 8
  %20 = getelementptr inbounds %struct.cam_periph, %struct.cam_periph* %19, i32 0, i32 0
  store i32* null, i32** %20, align 8
  %21 = load i32, i32* @CAM_REQ_CMP, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %12, %9
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
